--- a/templates/base.html
+++ b/templates/base.html
@@ -46,25 +46,26 @@
     </script>
 
     <!-- Modal -->
-    <!-- <div class="modal fade" id="genericModal" tabindex="-1" role="dialog" aria-labelledby="genericModalLabel"
+    <div class="modal fade" id="customModal" tabindex="-1" role="dialog" aria-labelledby="customModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="genericModalLabel"></h5>
+                    <h5 class="modal-title" id="cutomgModalLabel">Modal Title</h5>
                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="#" id="genericModalAction" class="btn"></a>
+                    <a href="#" id="customModalAction" class="btn">Action</a>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 
 
