--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
     <script src="{% static 'js/reservation_radio_tags.js' %}"></script>
-    <script src="{% static 'js/generic_modal.js' %}"></script>
+    <script src="{% static 'js/show_custom_modal.js' %}"></script>
     <script src="{% static 'js/cancel_reservation.js' %}"></script>
     <script src="{% static 'js/reservation_form.js' %}"></script>
 </body>
