--- a/templates/base.html
+++ b/templates/base.html
@@ -44,27 +44,8 @@
             alert.close();
         }, 2500);
     </script>
+    {% include 'custom_modal.html' %}
 
-    <!-- Modal -->
-    <div class="modal fade" id="customModal" tabindex="-1" role="dialog" aria-labelledby="customModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="cutomgModalLabel">Modal Title</h5>
-                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="#" id="customModalAction" class="btn">Action</a>
-                </div>
-            </div>
-        </div>
     </div>
 
 
@@ -77,8 +58,8 @@
     </script>
     <script src="{% static 'js/reservation_radio_tags.js' %}"></script>
     <script src="{% static 'js/show_custom_modal.js' %}"></script>
-    <script src="{% static 'js/cancel_reservation.js' %}"></script>
-    <script src="{% static 'js/reservation_form.js' %}"></script>
+    <script src="{% static 'js/confirm_cancel_reservation.js' %}"></script>
+    <script src="{% static 'js/confirm_reservation_form.js' %}"></script>
 </body>
 
 </html>
